# api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
src/application/api/: schemas.py
src/application/api/auth/: depends.py  handlers.py  schemas.py
src/application/api/chanels/: handlers.py  schemas.py
src/application/api/channels/: handlers.py  schemas.py
src/domain/entities/: base.py  chanels.py  channels.py  users.py
src/domain/exceptions/: base.py  chanels.py  channels.py  users.py
src/domain/values/: base.py  chanels.py  channels.py  users.py
src/infra/: database.py
src/infra/converters/: chanels.py  channels.py  users.py
src/infra/filters/: channels.py
src/infra/migrations/: env.py
src/infra/migrations/versions/: 67d52936ff53_.py  6ea700d36aea_.py  8049e28c1644_.py  843831a0eac8_.py  96e93c2eab6a_.py  b0d9c52e4766_.py  b1f1b7a43f0d_.py  c32a150544d1_.py  e6f2151ee343_.py
src/infra/models/: base.py  chanels.py  channels.py  users.py
src/infra/postgres/: __init__.py
src/infra/repositories/: base.py  chanels.py  channels.py  users.py
src/infra/services/: jwt.py  redis.py
src/logic/commands/: auth.py  chanels.py  channels.py
src/logic/exceptions/: auth.py  base.py  chanels.py  channels.py  mediator.py  users.py
src/logic/init/: container.py  mediator.py
src/logic/queries/: base.py  channels.py
src/settings/: config.py
src/tests/domain/entities/: test_users.py
src/tests/domain/values/: test_users.py
src/tests/infra/repositories/: test_users.py
(+2 files in other folders)
