[tool.poetry]
name = "communet-api"
version = "0.1.0"
description = "application for communication between users"
authors = ["Mihail <infast1k@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
pytest-asyncio = "^0.25.2"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
